--- a/2.Scientific_Background.tex
+++ b/2.Scientific_Background.tex
@@ -2,7 +2,7 @@
 An outline of the scientific concepts required for this thesis work is presented in this chapter. Firstly, the basics of wind energy conversion systems are explained. All components that are a part of an offshore wind farm network are depicted and explained. The conventional control topologies in the \gls{PE} converters of \gls{WG}s are also explained.
 
 \section{Wind Energy Conversion Systems (WECS)}\label{WECS_theory}
-The \gls{WECS} is a mixture of various engineering fields such as mechanical, electrical and control systems. The \gls{WECS} consists of several components that convert the kinetic energy of the wind into electrical energy and transfer power efficiently and systematically. The major mechanical equipment in the \gls{WECS} are the turbine tower, nacelle, rotor blades, hub, drives, gearbox, drive-train and mechanical brakes \cite{manwell2010wind}. The \gls{PE} converters, electrical generator, transmission cables, power transformers and transmission towers constitute the electrical part. The control systems governs both the electrical and mechanical systems \cite{yaramasu_high-power_2015}.
+The \gls{WECS} is a mixture of various engineering fields such as mechanical, electrical and control systems. The \gls{WECS} consists of several components that convert the kinetic energy of the wind into electrical energy and transfer power efficiently and systematically. The major mechanical equipment in the \gls{WECS} are the turbine tower, nacelle, rotor blades, hub, drives, gearbox, drive-train and mechanical brakes \cite{manwell2010wind}. The \gls{PE} converters, electrical generator, transmission cables, power transformers and transmission towers constitute the electrical part. The control systems govern both the electrical and mechanical systems \cite{yaramasu_high-power_2015}.
 The basic structure of the \gls{WECS} is depicted in Figure \ref{fig:WECS}.   
 
 \begin{figure}[H]
@@ -44,7 +44,7 @@ The Wind Turbine Generator (also termed as Wind Generator (\gls{WG}) ) consists 
 \begin{itemize}
     \item \textbf{Type 1 - Fixed speed Induction Generator (FSIG) :} Type 1 \gls{WG} has a fixed speed of operation. Hence, maximum power extraction at all times is not possible.
     \item \textbf{Type 2 - Slip Ring Induction Generator (SRIG) :} Type 2 \gls{WG} is a variable speed technology that uses a variable resistor in the rotor windings to adjust the rotor speed. However, the variation of speed is limited in this technology, and higher heat dissipation exists due to the variable resistance.
-    \item \textbf{Type 3 - Doubly-Fed Induction Generator (DFIG) :} Type 3 \gls{WG} also comes under the variable speed technology. The configuration is depicted in Figure \ref{fig:Type3}. The grid transformer is directly connected to the stator of the DFIG, and the rotor is connected through a partially rated \gls{PE} converter. This configuration adds variable frequency \gls{AC} excitation (instead of only resistance) to the rotor circuit. The additional excitation for the rotor is provided through slip rings by the Voltage Source Converter (\gls{VSC}) which controls rotor currents and thereby controls the torque and reactive power of the generator. This \gls{VSC} is the Machine Side Converter (\gls{MSC}) and is connected back-to-back with a Grid Side Converter (\gls{GSC}), which provides control of the \gls{DC} link voltage and the reactive power flow to the grid. The downside of this topology is that it requires gearbox for operation and hence the chances of wear and tear is high.
+    \item \textbf{Type 3 - Doubly-Fed Induction Generator (DFIG) :} Type 3 \gls{WG} also comes under variable speed technology. The configuration is depicted in Figure \ref{fig:Type3}. The grid transformer is directly connected to the stator of the DFIG, and the rotor is connected through a partially rated \gls{PE} converter. This configuration adds variable frequency \gls{AC} excitation (instead of only resistance) to the rotor circuit. The additional excitation for the rotor is provided through slip rings by the Voltage Source Converter (\gls{VSC}) which controls rotor currents and thereby controls the torque and reactive power of the generator. This \gls{VSC} is the Machine Side Converter (\gls{MSC}) and is connected back-to-back with a Grid Side Converter (\gls{GSC}), which provides control of the \gls{DC} link voltage and the reactive power flow to the grid. The downside of this topology is that it requires gearbox for operation and hence the chances of wear and tear is high.
     
     \begin{figure}[H]
 \centering
@@ -117,9 +117,9 @@ where $L_d$ and $L_q$ are the inductances in d and q axes respectively, $L_{md}$
 % \end{figure}
 
 \subsection{Voltage Source Converter (VSC)}\label{VSC_theory}
-The stator of the \gls{PMSG} is connected directly to the \gls{AC} side of a \gls{VSC} as seen in Figure \ref{fig:Type4}. This \gls{VSC} which works as a rectifier during generation operation, is termed as \gls{MSC}. It is interfaced back to back with another \gls{VSC} that works as an inverter during generation operation and is called \gls{GSC}.
+The stator of the \gls{PMSG} is connected directly to the \gls{AC} side of a \gls{VSC} as seen in Figure \ref{fig:Type4}. This \gls{VSC} which works as a rectifier during generation operation is termed as \gls{MSC}. It is interfaced back to back with another \gls{VSC} that works as an inverter during generation operation and is called \gls{GSC}.
 
-\gls{VSC} consists of self-commutated switching devices such as the Insulated Gate Bipolar Transistors (\gls{IGBT}s) and anti-parallel diodes and hence allows bidirectional flow of power between the \gls{AC} and \gls{DC} sides. The output voltage is obtained by switching off the \gls{IGBT}s in a synchronized manner. The \gls{VSC}s are classified as two-level or multi-level depending on the number of voltage levels they can generate \cite{noauthor_appendix_2014}. 
+\gls{VSC} consists of self-commutated switching devices such as the Insulated Gate Bipolar Transistors (\gls{IGBT}s) and anti-parallel diodes and hence allows the bidirectional flow of power between the \gls{AC} and \gls{DC} sides. The output voltage is obtained by switching off the \gls{IGBT}s in a synchronized manner. The \gls{VSC}s are classified as two-level or multi-level depending on the number of voltage levels they can generate \cite{noauthor_appendix_2014}. 
 
 \subsubsection{Two-level VSC}
 The two-level \gls{VSC} is the most commonly used type of converter in various applications because of the simplicity of its operation. The configuration of a two-level \gls{VSC} is depicted in Figure \ref{fig:2levelVSC}. Voltages of (1/2 $V_{dc}$, -1/2 $V_{dc}$) can be obtained using two-level \gls{VSC} as shown in the graph in Figure \ref{fig:2levelVSC}. The operation of switches $S_{1}$ and $S_{2}$ in two-level \gls{VSC} are operated complementary to prevent short circuit across the \gls{DC} link, hence protecting the \gls{PE} devices from being subjected to over-current.
@@ -169,7 +169,7 @@ The switching of the valves has to be configured using a control mechanism to en
 \end{figure}
 
 \subsubsection{Reference frame transformation}\label{ref_frame_trafo}
-\gls{PI} controllers are widely used for the control operation of \gls{VSC}s in power systems. It is therefore relevant to translate from three-phase abc frame to a rotating \gls{dq} frame in order to have a two signal representation of three-phase \gls{AC} signals. Figure \ref{fig:DQTransformation} shows the Clarke-Park transformation used for this purpose. The three-phase measured signals from the node are translated to a stationary reference frame ($\alpha \beta$) using the Clarke transform. It is then translated to a synchronous rotating \gls{dq} frame using the Park transform. The reference signal for control is provided to the corresponding frame, and after the control process is established, it is translated back to the three-phase signals. In the real scenario, during translation to a rotating \gls{dq} frame, the d-axis is made to align with the voltage of the grid and q-axis is aligned to zero. This is done by the voltage angle determined by the Phase Locked Loop (\gls{PLL}). Such an approach provides control of active power or \gls{DC} voltage using d-axis current component of the converter, while the reactive power or \gls{AC} voltage can be controlled using the q-axis current component of the converter.   
+\gls{PI} controllers are widely used for the control operation of \gls{VSC}s in power systems. It is therefore relevant to translate from three-phase abc frame to a rotating \gls{dq} frame in order to have a two signal representation of three-phase \gls{AC} signals. Figure \ref{fig:DQTransformation} shows the Clarke-Park transformation used for this purpose. The three-phase measured signals from the node are translated to a stationary reference frame ($\alpha \beta$) using the Clarke transform. It is then translated to a synchronous rotating \gls{dq} frame using the Park transform. The reference signal for control is provided to the corresponding frame, and after the control process is established, it is translated back to the three-phase signals. In real-world, during translation to a rotating \gls{dq} frame, the d-axis is aligned with the grid voltage, and q-axis is aligned to zero. The alignment is done by the voltage angle determined by the Phase Locked Loop (\gls{PLL}). Such an approach provides control of active power or \gls{DC} voltage using d-axis current component of the converter, while the reactive power or \gls{AC} voltage can be controlled using the q-axis current component of the converter.   
 
 \begin{figure}[H]
 \centering
@@ -217,7 +217,7 @@ The conventional current control strategy has not led to any major issues until 
 
 
 \subsubsection{Direct Voltage Control (DVC)}\label{DVC_theory}
-The major issue with conventional control is the wind up of the integrator that causes the voltage to rise. This happens because the reference value of current ($i_{d\_ref}$ and $i_{q\_ref}$) remains non-zero and the measured current ($i_d$ and $i_q$) following islanding nearly falls to zero. To overcome this issue, the inner control loop in Figure \ref{fig:Diss_GSC_control} is modified as shown in Figure \ref{fig:Diss_DVC_control}. In Figure \ref{fig:Diss_DVC_control}, the integrator term is avoided and the proportional term is moved to the output end. However, this causes the set points to differ in the absence of the integral component. The main role of set points is to limit the \gls{PE} converter current. Nevertheless, the current limitation would be based on the grid situation, and hence the performance of the controller is not affected in the absence of the integral component \cite{korai_dynamic_2019}, \cite{erlich_new_2017}.       
+The major issue with conventional control is the wind up of the integrator that causes the voltage to rise. This happens because the reference value of current ($i_{d\_ref}$ and $i_{q\_ref}$) remains non-zero and the measured current ($i_d$ and $i_q$) following islanding nearly falls to zero. To overcome this issue, the inner control loop in Figure \ref{fig:Diss_GSC_control} is modified as shown in Figure \ref{fig:Diss_DVC_control}. In Figure \ref{fig:Diss_DVC_control}, the integrator term is avoided, and the proportional term is moved to the output end. However, this causes the set points to differ in the absence of the integral component. The main role of set points is to limit the \gls{PE} converter current. Nevertheless, the current limitation would be based on the grid situation, and hence the performance of the controller is not affected in the absence of the integral component \cite{korai_dynamic_2019}, \cite{erlich_new_2017}.       
 
 \begin{figure}[H]
 \centering
@@ -241,7 +241,7 @@ The power balance equation at the \gls{WG} is given as follows:
 where rectifier is the \gls{MSC} and inverter is the \gls{GSC}. For steady-state conditions, the voltage across the \gls{DC} capacitance is steady. Thereby, the active power input for the inverter (\gls{GSC}) equals the active power output from the rectifier (\gls{MSC}). During the fault condition, the active power output from the inverter is decreased, whereas the output from the rectifier tends to be the same. The capacitors are charged during this scenario, and the \gls{DC} link voltage increases to maintain the power balance. 
 
 \section{High Voltage Direct Current (HVDC) Transmission}\label{HVDC_trans_theory}
-As the name suggests, a High Voltage Direct Current (\gls{HVDC}) transmission system uses \gls{DC} for bulk transmission of electrical power. The electrical power from the offshore \gls{AC} network is stepped-up using a power transformer and is converted to \gls{DC} at the converter station which is transmitted to onshore locations using subsea cables or overhead lines \cite{abbreviewnew}. The commercial utilization of \gls{HVDC} transmission was started in 1954 \cite{cigre2005b4}, \cite{peake_history_2010}. The \gls{HVDC} technology employs \gls{VSC}s to convert power from \gls{AC} to \gls{DC} and vice versa as explained in Section \ref{VSC_theory} and hence the systems that employ this technology are termed as \gls{VSC}-\gls{HVDC} systems.
+As the name suggests, a High Voltage Direct Current (\gls{HVDC}) transmission system uses \gls{DC} for bulk transmission of electrical power. The electrical power from the offshore \gls{AC} network is stepped-up using a power transformer and is converted to \gls{DC} at the converter station, which is transmitted to onshore locations using subsea cables or overhead lines \cite{abbreviewnew}. The commercial utilization of \gls{HVDC} transmission was started in 1954 \cite{cigre2005b4}, \cite{peake_history_2010}. \gls{HVDC} technology employs \gls{VSC}s to convert power from \gls{AC} to \gls{DC} and vice versa, as explained in Section \ref{VSC_theory}, and hence the systems that employ this technology are termed as \gls{VSC}-\gls{HVDC} systems.
 
 As explained in Section \ref{VSC_theory}, the classification for \gls{VSC}s can be termed as two-level and multi-level. The two-level \gls{VSC}s are an economical solution for low power rating applications up to 1 MVA. The main drawbacks of two-level \gls{VSC}s include increased power losses, high harmonic content on the \gls{AC} side voltages and require expensive filters to mitigate the harmonics. On the other hand, multi-level converters provide notable improvements for the above mentioned issues as can be seen in Figure \ref{fig:2levelVSCtoMMC} \cite{sharifabadi2016design}.   
 
