--- a/6.Conclusions_and_future_scope.tex
+++ b/6.Conclusions_and_future_scope.tex
@@ -1,18 +1,18 @@
 \chapter{Conclusions and Future Scope}\label{6}
 
-This chapter provides a concise description of the achieved results in the previous chapters, answers to the formulated research questions in Chapter \ref{1} and the future scope of this thesis is presented at the end.
+This chapter provides a concise description of the achieved results in the previous chapters, answers to the formulated research questions in Chapter \ref{1}, and the future scope of this thesis is presented at the end.
 
 \section{Summary}
 The thesis tackles the research problems identified in Chapter \ref{1} related to the need for large scale offshore networks with the available technology and provides solutions to mitigate technical challenges related to voltage and frequency control while developing large scale offshore networks.
 
 From literature, it is seen that the current state-of-the-art technology, \gls{MMC}-\gls{HVDC} transmission, for transferring offshore wind power is limited to a maximum capacity of 1.2 GW \cite{peralta2012detailed}. Hence, a configuration for a large scale offshore network (greater than or equal to 2 GW) with the available technology is currently lacking. It is expected that the upcoming \gls{OWF} projects will be utilizing 66 kV \gls{HVAC} transmission from \gls{OWF}s to the offshore converter station due to their significant advantages over the conventional combination of 33 kV and 145 kV \cite{dnv66kv}. Moreover, the technical challenges related to voltage and frequency control in islanding of \gls{OWF}s is not full filled in real-time application and lacks the major requirement of reactive current injection by the \gls{WG}s during dynamic conditions \cite{sethi_real-time_nodate-new}.
 
-This thesis adapts the latest trend in technology and overcomes the above mentioned research gaps by achieving the overall goal of developing a generic digital twin model of 2 GW, 66 kV \gls{HVAC} offshore network in RSCAD and performing analysis on the dynamics of voltage and power at various locations in the network. The digital twin model developed in this thesis adapts a hybrid configuration with two \gls{MMC}s working in parallel and connecting four \gls{OWF}s to the onshore system. The layout adapted for the 2 GW offshore network is achieved by modifying the layout of the hub-and-spoke principle in \cite{abb_hvdc_2018}. Additionally, the technical challenges faced while using conventional current control strategies in \gls{WG}s related to voltage and frequency control, are mitigated by implementing a new control strategy, \gls{DVC}, in all the four \gls{WG}s in RSCAD for real-time application. 
+This thesis adopts the latest trend in technology, and it overcomes the above mentioned research gaps by achieving the overall goal of developing a generic digital twin model of 2 GW, 66 kV \gls{HVAC} offshore network in RSCAD and performing analysis on the dynamics of voltage and power at various locations in the network. The digital twin model developed in this thesis adopts a hybrid configuration with two \gls{MMC}s working in parallel and connecting four \gls{OWF}s to the onshore system. The layout adopted for the 2 GW offshore network is achieved by modifying the layout of the hub-and-spoke principle in \cite{abb_hvdc_2018}. Additionally, the technical challenges faced while using conventional current control strategies in \gls{WG}s related to voltage and frequency control, are mitigated by implementing a new control strategy, \gls{DVC}, in all the four \gls{WG}s in RSCAD for real-time application. 
 
-To achieve the overall goal, initially, the \gls{DVC} is implemented for real-time application in RSCAD for one set of \gls{OWF} connected to a 66 kV \gls{HVAC} network. The large scale 2 GW offshore network is developed by modularly connecting four sets of the aforementioned single \gls{OWF} model in parallel. The 2 GW offshore wind power is transferred to the onshore network through two parallel connected \gls{MMC}s. The key features of the model include- all the \gls{WG}s are equipped with \gls{DVC}, one \gls{MMC} working in grid forming control and the other working in grid following control. Such a model is unique because it incorporates a hybrid layout that allows for the coordination of the above mentioned strategies during steady state and dynamic conditions in the network.    
+To achieve the overall goal, initially, the \gls{DVC} is implemented for real-time application in RSCAD for one set of \gls{OWF} connected to a 66 kV \gls{HVAC} network. The large scale 2 GW offshore network is developed by modularly connecting four sets of the aforementioned single \gls{OWF} model in parallel. The 2 GW offshore wind power is transferred to the onshore network through two parallel connected \gls{MMC}s. The key features of the model include- all the \gls{WG}s are equipped with \gls{DVC}, one \gls{MMC} working in V/F control and the other working in active power control. Such a model is unique because it incorporates a hybrid layout that allows for the coordination of the above mentioned strategies during steady state and dynamic conditions in the network.    
 
 
-Few significant results of the model include the achievement of short-term voltage stability in the network during severe dynamic scenarios, the requirement of reactive current injection by \gls{WG}s during islanding by performing three-phase fault analysis. These results confirm the stable operation of the network under severe dynamic scenarios and the corresponding network model can be utilized for further advancements on the size of the offshore network.  
+Few significant results of the model include the achievement of short-term voltage stability in the network during severe dynamic scenarios, the requirement of reactive current injection by \gls{WG}s during islanding by performing three-phase fault analysis. These results confirm the stable operation of the network under severe dynamic scenarios, and the corresponding network model can be utilized for further advancements on the size of the offshore network.  
 
 % The voltage stability and power flow in the network during severe dynamic conditions such as disconnection of one set of \gls{OWF} and a three-phase line to ground fault in the middle of an \gls{HVAC} cable, The \gls{DVC} implemented in Type-4 \gls{WG}s    
 
@@ -35,13 +35,13 @@ Few significant results of the model include the achievement of short-term volta
 \vspace{2mm}
 \paragraph{\textcolor{blue}{Research Question 1 : How effective is the \gls{DVC} when implemented in an \gls{EMT} average model of Type-4 \gls{WG} connected to a 66 kV equivalent \gls{HVAC} system in RSCAD?}}
 
-\paragraph{} As the upcoming projects are expected to have 66 kV \gls{HVAC} transmission from \gls{OWF}s to the offshore converter station, the \gls{DVC} in \gls{GSC} of Type-4 \gls{WG} connected to an infinite grid, is modelled for a 66 kV \gls{HVAC} offshore network in RSCAD. The performance of \gls{DVC} is tested for the most severe disturbance i.e. the three-phase line to ground fault. The three-phase line to ground fault is implemented in the middle of the 66 kV \gls{HVAC} cable. On viewing the voltage profile at the \gls{PCC} following the fault, it is observed that \gls{DVC} provides a stable operation in terms of short-term voltage stability. This is due to the fast control action of the local voltage control in the reactive power loop of the \gls{DVC} to support the \gls{PCC} voltage during the time of fault. 
+\paragraph{} As the upcoming projects are expected to have 66 kV \gls{HVAC} transmission from \gls{OWF}s to the offshore converter station, the \gls{DVC} in \gls{GSC} of Type-4 \gls{WG} connected to an infinite grid, is modelled for a 66 kV \gls{HVAC} offshore network in RSCAD. The performance of \gls{DVC} is tested for the most severe disturbance, i.e. the three-phase line to ground fault. The three-phase line to ground fault is implemented in the middle of the 66 kV \gls{HVAC} cable. On viewing the voltage profile at the \gls{PCC} following the fault, it is observed that \gls{DVC} provides stable operation in terms of short-term voltage stability. This is due to the fast control action of the local voltage control in the reactive power loop of the \gls{DVC} to support the \gls{PCC} voltage during the time of the fault. 
 % During the fault, the active power generation from the \gls{WG} is stopped. The power output from the \gls{MSC} remains the same as pre-fault state, whereas the output from the \gls{GSC} reduces. Hence, in order to maintain the power balance equation, the \gls{DC} voltage across the capacitor increases, when this increases beyond a particular value, the chopper gets activated. 
-In terms of reactive current injection, the \gls{DVC} provides active current priority during steady state conditions and reactive current priority during the time of fault which is a significant requirement by most of the grid codes. The effect of damping during the time of fault is controlled by the washout filters in the active and reactive power control loops. A parameter sensitivity analysis is performed for the washout filters to assess the effectiveness in damping. Additionally, it can stated that the indirect control of voltage in conventional current control requires a Fault Ride Through (FRT) controller to force reactive current injection during the time of fault. However, such an external control is not required in \gls{DVC} wherein the voltage of \gls{GSC} is controlled directly. 
+In terms of reactive current injection, the \gls{DVC} provides active current priority during steady state conditions and reactive current priority during the time of the fault, which is an important requirement by most of the grid codes. The effect of damping during the time of fault is controlled by the washout filters in the active and reactive power control loops. A parameter sensitivity analysis is performed for the washout filters to assess the effectiveness of damping. %Additionally, it can stated that the indirect control of voltage in conventional current control requires a Fault Ride Through (FRT) controller to force reactive current injection during the time of fault. However, such an external control is not required in \gls{DVC} wherein the voltage of \gls{GSC} is controlled directly. 
 
 \paragraph{\textcolor{blue}{Research Question 2 : What insights can be attained by the \gls{EMT} average model of Type-4 \gls{WG} with \gls{DVC} in 66 kV network in RSCAD in comparison with a similar system modelled with a simplified Type-4 \gls{WG} configuration with \gls{DVC} in DIgSILENT PowerFactory?}}
 
-\paragraph{} The performance of the implemented \gls{DVC} in a average model of Type-4 \gls{WG} in RSCAD for a 66 kV \gls{HVAC} network is compared with the benchmark \gls{DVC} for a simplified Type-4 \gls{WG} model in PowerFactory for a similar 66 kV \gls{HVAC} network. The comparison is done in terms of short-term voltage stability and reactive current injection following a three-phase line to ground fault in the network. A three-phase line to ground fault in the middle of the \gls{HVAC} cable is simulated in both the models in \gls{EMT} platform. The voltage, active and reactive current profiles are compared and found to have good correspondence following the three-phase line to ground fault. This shows the validation of the \gls{DVC} implemented in the average model of the Type-4 \gls{WG} for a 66 kV \gls{HVAC} offshore network in RSCAD. Moreover, it is observed that the model developed in RSCAD has slight transients in the active and reactive currents throughout the simulation. This is due to the detailed model representation of \gls{GSC} in RSCAD when compared to the simplified model in PowerFactory. These results show that the RSCAD model provides better detailed representation of the real-world operation of the implemented \gls{DVC} and can be used as a reference model. The way \gls{DVC} is modelled to provide voltage support during the time of fault in the 66 kV \gls{HVAC} network are in line with the results from previous studies, in which the \gls{DVC} is implemented for a 33 kV \gls{HVAC} network as explained in \cite{korai_dynamic_2019}.    
+\paragraph{} The performance of the implemented \gls{DVC} in a average model of Type-4 \gls{WG} in RSCAD for a 66 kV \gls{HVAC} network is compared with the benchmark \gls{DVC} for a simplified Type-4 \gls{WG} model in PowerFactory for a similar 66 kV \gls{HVAC} network. The comparison is made in terms of short-term voltage stability and reactive current injection following a three-phase line to ground fault in the network. A three-phase line to ground fault in the middle of the \gls{HVAC} cable is simulated in both the models in \gls{EMT} platform. The voltage, active and reactive current profiles are compared and found to have good correspondence following the three-phase line to ground fault. This shows the validation of the \gls{DVC} implemented in the average model of the Type-4 \gls{WG} for a 66 kV \gls{HVAC} offshore network in RSCAD. Moreover, it is observed that the model developed in RSCAD has slight transients in the active and reactive currents throughout the simulation. This is due to the detailed model representation of \gls{GSC} in RSCAD when compared to the simplified model in PowerFactory. These results show that the RSCAD model provides a better detailed representation of the real-world operation of the implemented \gls{DVC} and can be used as a reference model. The way \gls{DVC} is modelled to provide voltage support during the time of fault in 66 kV \gls{HVAC} network are in line with the results from previous studies, in which \gls{DVC} is implemented for a 33 kV \gls{HVAC} network as explained in \cite{korai_dynamic_2019}.   
 
 
 %and thereby, results achieved in terms of short-term voltage stability and reactive current injection 
@@ -49,20 +49,20 @@ In terms of reactive current injection, the \gls{DVC} provides active current pr
 
 \paragraph{\textcolor{blue}{Research Question 3 : How can Type-4 \gls{WG}s with implemented \gls{DVC} work in coordination with offshore \gls{MMC}s within a multi-gigawatt offshore transmission network?}}
 
-\paragraph{} Due to the urging need to move for large scale offshore networks with the currently available technology, a modified hybrid layout is implemented for the development of a 2 GW offshore network. The layout contains the connection of four sets of \gls{OWF}s connected to a common bus to which two \gls{MMC}s working in parallel are connected. To tackle the technical challenges related to voltage and frequency control in offshore islanded networks, all the four \gls{OWF}s are modelled with the implemented \gls{DVC}. This is done by modularly connecting the single \gls{OWF} model with implemented \gls{DVC} developed in Chapter \ref{3}. To provide the voltage reference during steady state operation, it is proposed that one of the \gls{MMC}s (\gls{MMC}-1) is operated in V/F control and to constantly continue the flow of power in the network, it is proposed that \gls{MMC}-2 is operated in active power control. %During the time of fault, the voltage reference at the \gls{PCC} is provided by the \gls{DVC} in \gls{WG}s.
-The coordination between the V/F control in \gls{MMC}-1, active power control in \gls{MMC}-2 and the \gls{DVC} in \gls{OWF}s provide a synchronized operation during the steady state and dynamic conditions in the network. One of highly severe conditions tested is the disconnection of one \gls{OWF}. \gls{OWF}-2 is considered for this event. In such a situation, it is observed that the network remains stable following the disconnection and the power flowing through \gls{MMC}-1 reduces as it is working in V/F control i.e. capable of providing and absorbing power. Another highly severe event tested is the three-phase line to ground fault in one of the \gls{HVAC} cables. A circuit breaker logic is modelled to isolate \gls{OWF}-1 from the network when the fault occurs in \gls{HVAC} cable-1. It is observed that the operation of the entire network remains stable during the pre-fault condition where active current is injected or can be termed as active power is generated by all the \gls{OWF}s. During the time of fault in \gls{HVAC} cable-1, the circuit breaker at the end of the cable is opened upon detection of overcurrent and thereby, islanding \gls{OWF}-1. The fast local voltage control in \gls{DVC} in \gls{OWF}-1 provides voltage support during the time of fault and due to the grid conditions, reactive current is injected by the \gls{OWF}-1 to the fault location. The currents are limited to the rating of the \gls{GSC} by the employed current limitation technique. Hence, it can be concluded that the V/F control provides the voltage reference during the pre-fault and post fault condition for the network and \gls{DVC} provides voltage reference at the corresponding \gls{PCC} when the \gls{OWF} is islanded.
+\paragraph{} Due to the urging need to move for large scale offshore networks with the currently available technology, a modified hybrid layout is implemented for the development of a 2 GW offshore network. The layout contains the connection of four sets of \gls{OWF}s connected to a common bus to which two \gls{MMC}s working in parallel are connected. To tackle the technical challenges related to voltage and frequency control in offshore islanded networks, all four \gls{OWF}s are modelled with the implemented \gls{DVC}. This is done by modularly connecting the single \gls{OWF} model with implemented \gls{DVC} developed in Chapter \ref{3}. To provide the voltage reference during steady state operation, it is proposed that one of the \gls{MMC}s (\gls{MMC}-1) is operated in V/F control and to continue the flow of power in the network constantly, it is proposed that \gls{MMC}-2 is operated in active power control. %During the time of fault, the voltage reference at the \gls{PCC} is provided by the \gls{DVC} in \gls{WG}s.
+The coordination between the V/F control in \gls{MMC}-1, active power control in \gls{MMC}-2 and the \gls{DVC} in \gls{OWF}s provide a synchronized operation during the steady state and dynamic conditions in the network. One of the highly severe conditions tested is the disconnection of one \gls{OWF}. \gls{OWF}-2 is considered for this event. In such a situation, it is observed that the network remains stable following the disconnection and the power flowing through \gls{MMC}-1 reduces as it is working in V/F control, i.e. capable of providing and absorbing power. Another highly severe event tested is the three-phase line to ground fault in one of the \gls{HVAC} cables. A circuit breaker logic is modelled to isolate \gls{OWF}-1 from the network when the fault occurs in \gls{HVAC} cable-1. It is observed that the operation of the entire network remains stable during the pre-fault condition where active current is injected or can be termed as active power is generated by all the \gls{OWF}s. During the time of fault in \gls{HVAC} cable-1, circuit breaker at the end of the cable is opened upon detection of overcurrent and thereby, islanding \gls{OWF}-1. The fast local voltage control in \gls{DVC} in \gls{OWF}-1 provides voltage support during the time of the fault, and due to the grid conditions, the reactive current is injected by \gls{OWF}-1 to the fault location. The currents are limited to the rating of the \gls{GSC} by the employed current limitation technique. Hence, it can be concluded that the V/F control provides the voltage reference during the pre-fault and post fault condition for the network and \gls{DVC} provides voltage reference at the corresponding \gls{PCC} when the \gls{OWF} is islanded.
 
 \paragraph{\textcolor{blue}{Research Question 4 : How effectively do Type-4 \gls{WG}s with implemented \gls{DVC} perform when connected in an offshore network for parallel operation?}}
 
-\paragraph{} The four \gls{OWF}s with implemented \gls{DVC} are connected to a common \gls{MMC} bus in the 2 GW offshore network. This makes the \gls{OWF}s to be working in parallel configuration. The voltage and current profiles at the \gls{PCC}s of all the \gls{OWF}s are similar in steady state since all the four \gls{OWF}s are modelled and simulated by considering the same wind speed profile (generating equal amount of power). During the highly severe conditions such as the disconnection of \gls{OWF}-1, it is observed that the power generated from other \gls{OWF}s connected to the network compensate equally for the loss of the disconnected \gls{OWF}-1 by providing a slightly higher voltage at the corresponding \gls{PCC}s. This is done equally by the local voltage control in corresponding \gls{DVC} to support for the drop in voltage, due to the assumption of having similar parameters in all \gls{DVC}. Additionally, in the event of a three-phase fault in \gls{HVAC}-1 cable, there occurs drop in voltages in other \gls{PCC}s as well since they are connected to a common bus. However, the voltages at the \gls{PCC}s are recovered in the post fault condition and stabilized by the corresponding fast voltage control in \gls{DVC} to equal values due to the similar settings in the control loops. Therefore, it can concluded that each \gls{OWF} contributes equally to maintain the power balance in the network during steady state and dynamic conditions.   
+\paragraph{} The four \gls{OWF}s with implemented \gls{DVC} are connected to a common \gls{MMC} bus in the 2 GW offshore network. This makes the \gls{OWF}s to be working in a parallel configuration. The voltage and current profiles at the \gls{PCC}s of all the \gls{OWF}s are similar in the steady state since all the four \gls{OWF}s are modelled and simulated by considering the same wind speed profile (generating an equal amount of power). During the highly severe conditions such as the disconnection of \gls{OWF}-1, it is observed that the power generated from other \gls{OWF}s connected to the network compensate equally for the loss of the disconnected \gls{OWF}-1 by providing a slightly higher voltage at the corresponding \gls{PCC}s. This is done equally by the local voltage control in the corresponding \gls{DVC} to support for the voltage drop, due to the assumption of having similar parameters in all \gls{DVC}. Additionally, in the event of a three-phase fault in \gls{HVAC}-1 cable, there occurs a drop in voltages in other \gls{PCC}s as well since they are connected to a common bus. However, voltages at the \gls{PCC}s are recovered in the post fault condition and stabilized by the corresponding fast voltage control in \gls{DVC} to equal values due to the similar settings in the control loops. Therefore, it can be concluded that each \gls{OWF} contributes equally to maintain the power balance in the network during steady state and dynamic conditions.   
 
 \section{Recommendations for Future Work}
 Having successfully achieved the defined goals for this thesis and based on the studies performed, the author provides recommendations in the following section:  
 \begin{itemize}
-    \item The availability of additional NovaCor processor at TU Delft could be fully utilized to scale up the model to a capacity of 4 GW by accordingly connecting \gls{WG}s and \gls{MMC}s in a modular approach. The practical scenario of multi-terminal \gls{AC} network can be implemented and the performance of the \gls{WG}s with \gls{DVC} can be analyzed.
+    \item The availability of additional NovaCor processor at TU Delft could be fully utilized to scale up the model to a capacity of 4 GW by accordingly connecting \gls{WG}s and \gls{MMC}s in a modular approach. The practical scenario of multi-terminal \gls{AC} network can be implemented, and the performance of the \gls{WG}s with \gls{DVC} can be analyzed.
     \item The present model of \gls{DVC} is applicable for three-phase fault analysis. Analysis can be extended for single-phase faults that are more common to occur in the real scenario by developing a negative sequence control loop for the \gls{DVC}.
     \item Various other network topologies can be researched on and tested with the implemented \gls{DVC} to investigate the cost-benefit feature for the industry experts. 
-    \item The integration of the onshore converter station to the offshore network by removing the \gls{DC} sources from the present model can be accomplished and extensive fault analysis can be performed in the \gls{MMC}-\gls{HVDC} network.
+    \item The integration of the onshore converter station to the offshore network by removing the \gls{DC} sources from the present model can be accomplished, and extensive fault analysis can be performed in the \gls{MMC}-\gls{HVDC} network.
     \item The practicality of the controller can be tested by performing Hardware In Loop testing of the implemented \gls{DVC} in a properly set-up test bench.
     \item The developed 2 GW generic model can be incorporated with other control strategies suggested in Section \ref{lit_review} for \gls{WG}s, and studies related to the interoperability of these controllers and coordination with \gls{MMC} control strategies can be performed.
 \end{itemize}
