--- a/Appendix-c.tex
+++ b/Appendix-c.tex
@@ -5,7 +5,7 @@
 \centering
 %\hspace*{-0.2cm}
     \includegraphics[height = 16cm,width = 10.5cm]{Diagrams/Appendix_C/MMC_2_RSCAD_Rep.pdf}
-    \caption{Subsystem-1: 66 kV HVAC cables connected to offshore MMC stations in Draft module in RSCAD}
+    \caption{Subsystem-1: 66 kV HVAC cables connected to offshore converter stations in Draft module in RSCAD}
     \label{fig:MMC_2_RSCAD_Rep}
 \end{figure}
 
