--- a/Acknowledgement.tex
+++ b/Acknowledgement.tex
@@ -1,19 +1,22 @@
 \chapter*{Acknowledgement}
 
-There are many people to thank for the successful completion of this thesis. Firstly, I would like to thank Dr. Jose Rueda Torres for providing me this opportunity to work on such an interesting topic and guiding me throughout the research. His inputs and suggestions throughout the thesis have been extremely valuable. All the constructive criticisms through his comments for my report have contributed to developing me as a good researcher and a good human being. I also would like to thank Prof. Mart van der Meijden for believing in me and for the constant support through several meetings. He has always made me aware of the bigger picture of the work I was doing. I am incredibly thankful to both my supervisors for their support and goodwill during this thesis. 
+There are many people to thank for the successful completion of my thesis. Firstly, I would like to thank Dr. Jose Rueda Torres for providing me with this opportunity to work on such an interesting topic and guiding me throughout the research. His inputs and suggestions have been extremely valuable. All the constructive criticisms through his comments for my report and presentations has helped in developing me as a good researcher and a good human being. My sincere gratitude to Prof. Mart van der Meijden for believing in me and for the constant support. He has always made me aware of the bigger picture of the work I was doing. I am incredibly thankful to both my supervisors for their support and goodwill during this thesis. Moreover, I thank Dr. Thiago Batista for being a part of my thesis committee and taking time to review and assess my work.  
+
+I am indebted to my daily supervisor Arcadio Perilla for holding the torch to light my path all along this uphill journey. %He has been a constant support and a pillar of strength throughout my thesis project. 
+I am grateful for all the discussions, explanations and proposed ideas for the successful completion of this project. He has been a great teacher to me from the start of my thesis and this work would not have been possible without his help and contribution. 
 
 
-% I would like to extend my thanks to my daily supervisor and friend,  for providing me  the kindly consenting to be a part of my defense committee.
-I cannot thank enough my daily supervisor Arcadio Perilla. He has been a constant support and a pillar of strength throughout my thesis project. I would like to really thank him, for all the discussions, explanations, proposed ideas and transfer of knowledge for the successful completion of this project  
-in the difficult periods, when the project results were not the expected ones He has been a constant support and a pillar of strength throughout my thesis. This thesis would not have been possible without his help and contribution. 
+A special thanks to Dr. Abdul Korai from DIgSILENT GmbH and Shubham Sethi from Hitachi ABB Power Grids, whose works served as an inspiration for the development of this thesis and for their insights on the report. I also extend my gratitude to Nidarshan, Dr. Zameer Ahmad and Ajay for their sharp comments given during the break discussions. Every time I hit a roadblock, they assured me that 'this too shall pass'. Also, thanks for the free coffee! 
+%I would also like to Stelios Papadakis, for his well documented report, that eased out me to under RSCAD software
 
-His determination and motivation to work have always made an impact on me. I am sure that this learning experience I had from him will be an asset to me. On a lighter note, I will never forget these two things: first, our discussions 
+I am extremely grateful for my friends Preetha, Vishal, Medha, Nived, Devika chechi, Adeep and Lee for being my support system and keeping my sanity intact. They are now family to me and have played a huge role in the last two years of my life in Delft. Thank you so much people! A big shout out to Medha and Nived for helping me with the cover picture. 
 
+Finally, Varun and Veena manni for their support. Last but not the least, I take this opportunity to thank Amma and Appa for letting me pursue my ambition, supporting and encouraging me to achieve my dreams. Thank you so much Amma and Appa!   
 
-% after coming out of meetings with Suleyman! And his expression whenever I say I have a new idea!
-% A huge thanks to the AMD group: Murat Sorkun, Elif Sorkun, Qi Zhang, Xuan Zhou, and Dr. Abishek Khetan at DIFFER. Their inputs and invaluable suggestions on my presentations have been a massive help during my thesis preparations and the poster presentations. A special thanks to Murat for helping me out with my codes. Also, thank you for all the snacks which you people bought for the office. They kept me running during my late working hours at DIFFER.
-% I want to thank Nitin Prasad for all his insightful suggestions and discussion during my thesis. Thank you for helping me find answers to the questions I had regarding catalysis. I would also like to thank Dr. Rifat Kamarudheen for all the heated discussions and debates on science, academia, and everything around! I would also like to thank Kiran George and Dr. Vivek Sinha for giving me insights about planning my thesis work. I would also like to thank Devyani Sharma for the much-needed coffee breaks and conversation between my work. Late-night discussions and motivational talk from Samuel Mani has played a massive role in me, keeping up my spirits through this thesis. Thank you so much for that! I want to thank my friends Saran, Preetha, Kammath, Reuben, Apurva, Shrinidhi, Thejus, Arun, Hitha, Mamta, Sid, Geo, Jesil and all my friends back home for helping me during this time.
-% Last but not least, my family has been supportive and encouraging of my decisions during this time. I thank Amma, Appa, Vivek, Yamini, Rohit, Prabhat, and Ammama for their love and support. I am indebted to them for all that they have done for me. I wish my granddad was here to see me complete this master's. He was dearly missed during this time.
+\vspace{7mm}
+
+"To the Class of 2020.."
+
 
 \begin{flushright}
 {\makeatletter\itshape
