--- a/report.tex
+++ b/report.tex
@@ -139,18 +139,19 @@
 %\makecover
 
 %% Include an optional title page.
-\input{title}
+% \input{title}
 
-%\input{Acknowledgement}
-\input{Abstract}
-
-\tableofcontents
+% \input{Acknowledgement}
+% \input{Abstract}
 
 
+% \tableofcontents
 
-\listoffigures
 
-\listoftables
+
+% \listoffigures
+
+% \listoftables
 
 \printglossary[title=List of Abbreviations]
 
@@ -159,19 +160,19 @@
 
 \mainmatter
 
-\input{1.Introduction}
- \input{2.Scientific_Background}
- \input{3.Implementation_of_DVC}
-% \input{4.Large_scale}
+% \input{1.Introduction}
+%  \input{2.Scientific_Background}
+% \input{3.Implementation_of_DVC}
+%  \input{4.Large_scale}
 % \input{5.Operation_of_2GW}
-%\input{6.Conclusions_and_future_scope}
+ \input{6.Conclusions_and_future_scope}
 
-\begin{appendices}
- \input{Appendix-a}
- \input{Appendix-b}
- \input{Appendix-c}
-\input{Appendix-d}
- \end{appendices}
+%  \begin{appendices}
+%  \input{Appendix-a}
+%  \input{Appendix-b}
+%  \input{Appendix-c}
+% \input{Appendix-d}
+%   \end{appendices}
 \bibliographystyle{ieeetran}
 %% Use letters for the chapter numbers of the appendices.
 
